[package]
name = "launchpad_ji"
version = "0.1.0"
edition = "2021"
authors = ["Fraccy"]
license = "MIT"

[dependencies]
serde = {version = "^1.0.159", default-features = false}
baseplug = { git = "https://github.com/wrl/baseplug.git", package = "baseplug" }
ringbuf = "0.3.3"

[lib]
name = "launchpad_ji"
path = "src/launchpad_ji.rs"
crate-type = ["cdylib"]
